# VIR_setup_toolkit

./: CMakeLists.txt  README  main.cpp  zero
data/: 000404694512_HD_intrinsic.yml  000404694512_HXGA_intrinsic.yml  000440922112_HD_intrinsic.yml  000440922112_HXGA_intrinsic.yml  000457922112_HD_intrinsic.yml  000457922112_HXGA_intrinsic.yml  000457922112_QHD_intrinsic.yml  000457922112_UHD_intrinsic.yml  000468922112_HD_intrinsic.yml  000468922112_HXGA_intrinsic.yml  000913194512_HD_intrinsic.yml  000913194512_HXGA_intrinsic.yml  20332044_HD2K_left_intrinsic.yml  20332044_HD720_left_intrinsic.yml  21929705_HD2K_left_intrinsic.yml  21929705_HD720_left_intrinsic.yml  24380057_HD2K_left_intrinsic.yml  24380057_HD720_left_intrinsic.yml  29134678_HD2K_left_intrinsic.yml  29134678_HD720_left_intrinsic.yml  detector_params.yml  kinect_FHD_intrinsic.yml  kinect_HXGA_intrinsic.yml  newcam_HD_intrinsic.yml  newcam_UHD_intrinsic.yml  webcam_HD_intrinsic.yml  webcam_QHD_intrinsic.yml
face/: 0_CropFaces.py  0_CropFaces.sh  1_GenListFile.py  1_GenListFile.sh  2_Train.py  2_Train.sh  3_TestModel.py  3_TestModel.sh
face/config/: head_conf.yaml
face/data_processor/: test_dataset.py
face/head/: MagFace.py
face/logs/: sdk.log.1  sdk.log.2  sdk.log.3
face/logs/mv-hrnet/: events.out.tfevents.1704197535.lab
face/models/face_detection/face_detection_2.0/: model_meta.json
face/utils/: gen_train_file.py  hurelData_img_list.txt  hurelData_train_file.txt
face/utils/extractor/: feature_extractor.py
include/: BoardCalib.hh  CoordMatch.hh  FaceModelGen.hh  Functions.hh  GetSkeleton.hh  RecordVideo.hh  SyncCamera.hh  TrackingViewer.hpp  ViewCoords.hh
src/: BoardCalib.cc  CoordMatch.cc  FaceModelGen.cc  Functions.cc  GLViewer.cpp  GetSkeleton.cc  RecordVideo.cc  SyncCamera.cc  ViewCoords.cc
